# server-remote

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  rust-toolchain.toml  tamagui.config.ts  tsconfig.json
.tamagui/: tamagui.config.cjs  tamagui.config.json
android/: settings.gradle
android/app/: build.gradle
app/: _layout.tsx  index.tsx  modal.tsx  types.ts
app/(tabs)/: _layout.tsx  docker.tsx  index.tsx  vm.tsx
app/components/: labeled-input.tsx  server-card.tsx
app/contexts/: ServerConnection.tsx
app/storage/: secure.ts
assets/: featured-play-store.psd  icon.ai
ios/: Podfile
ios/serverremote/: Info.plist
ios/serverremote.xcodeproj/: project.pbxproj
ios/serverremote.xcworkspace/: contents.xcworkspacedata
modules/ssh-module/: expo-module.config.json  index.ts
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
scripts/: cargo-android.ts  cargo-ios.ts  rosetta-sim.sh  shared.ts
src/app/: +not-found.tsx  _layout.tsx  feature-request.tsx  index.tsx  modal.tsx  servers.tsx
src/components/: alert.tsx  bookmark-button.tsx  cache-file.tsx  checkbox-labeled.tsx  container-card.tsx  details-expand-button.tsx  details-nav.tsx  exit-button.tsx  feature-request-button.tsx  feature-request-modal.tsx  file-list.tsx  file-upload-button.tsx  file-viewer-nav.tsx  header-back.tsx  json-tree.tsx  json.tsx  labeled-input.tsx  login.tsx  logs.tsx  paste-button.tsx  rename.tsx  root-button.tsx  server-card.tsx  tabs.tsx  (+1 more)
typing/: react-native-xml2js.d.ts
uniffi-bindgen/: Cargo.toml
(+128 files in other folders)
