[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
russh = "0.43.0"
uniffi = { version = "0.26.1" }
thiserror = "1.0"
anyhow = "1.0.86"
async-trait = "0.1.80"
russh-keys = "0.43.0"
tokio = "1.37.0"
termion = "4.0.0"

[lib]
crate-type = ["staticlib", "cdylib"]
