[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
jni = "0.21.1"
once_cell = "1.19.0"
russh = "0.43.0"
russh-keys = "0.43.0"
russh-sftp = "2.0.1"
termion = "4.0.0"
thiserror = "1.0" 
tokio = { version = "1.37.0", features = ["fs"] }
uniffi = { version = "0.26.1" }

[lib]
crate-type = ["staticlib", "cdylib"]
